all Routes for seller
